<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/fondo_inicio_sesi_n2"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="726dp"
        android:layout_margin="10dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="24dp">


            <ImageView
                android:id="@+id/Id_img_logo_restaurante"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="top|center"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/img_Logo"
                android:src="@drawable/logo_saz_n_chen_2" />

            <TextView
                android:id="@+id/id_Inf_InciarSeccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/iniciarSesion"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_bienvenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bienvenido"
                android:textSize="20sp"
                android:textStyle="normal">

            </TextView>

            <EditText
                android:id="@+id/etCard"
                style="@android:style/Widget.EditText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:autofillHints="usuario"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/Cedula"
                android:inputType="text"
                android:padding="11dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textSize="20sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/etPassword"
                style="@android:style/Widget.EditText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:autofillHints="contraseña"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/Contrasena"
                android:inputType="textPassword"
                android:padding="11dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textSize="20sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/btn_inicio_sesion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:backgroundTint="@color/verde2"
                android:text="@string/Btn_Login"
                android:textColor="@color/black"
                android:textSize="18sp">


            </Button>

            <Button
                android:id="@+id/btn_sin_registro"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/verde2"
                android:text="@string/Btn_Orden"
                android:textColor="@color/black"
                android:textSize="18sp">


            </Button>

            <TextView
                android:id="@+id/id_OlvidarContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/OlvidarContraseña"
                android:textSize="16sp">

            </TextView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="@string/txt_Sin_Cuenta"
                android:textSize="16sp">

            </TextView>

            <TextView
                android:id="@+id/tv_registrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_Register"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>


    </androidx.cardview.widget.CardView>





</androidx.coordinatorlayout.widget.CoordinatorLayout>