<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_inicio_sesi_n2"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/Logo"
                    android:layout_width="200dp"
                    android:layout_height="110dp"
                    android:layout_gravity="start"
                    android:layout_marginTop="0dp"
                    android:contentDescription="@string/img_logo_restaurante"
                    android:src="@drawable/logo_saz_n_chen_2" />


                <TextView
                    android:id="@+id/TextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/CrearCuenta"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/red"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <EditText
                android:id="@+id/etCard"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:autofillHints="usuario"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/Cedula"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:autofillHints="Nombres"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/Nombres"
                android:inputType="text|textPersonName"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:autofillHints="TelefonoMovil"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_phone_android_24"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/Telefono"
                android:inputType="phone"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />


            <EditText
                android:id="@+id/etPassword"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:autofillHints="Contraseña"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/Contrasena"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />


            <CheckBox
                android:id="@+id/CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="true"
                android:focusable="auto"
                android:text="@string/CheckBox" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/btnCreate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/verde2"
                    android:text="@string/Crear"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnFetch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/verde2"
                    android:text="@string/BuscarUsuario"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:cornerRadius="20dp" />

                <EditText
                    android:id="@+id/etId"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:autofillHints="usuario"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:drawablePadding="1dp"
                    android:ems="10"
                    android:hint="@string/Id"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvtienescuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/white"
        android:padding="4dp"
        android:text="@string/TienesCuenta"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tviniciarsesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/white"
        android:text="@string/iniciarSesion"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold" />

</LinearLayout>